fix scroll overflow

--- a/bundles/tracker/donation/components/DonationIncentives.mod.css
+++ b/bundles/tracker/donation/components/DonationIncentives.mod.css
@@ -22,7 +22,7 @@
 }
 
 .results {
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 .result {
